--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ exclude =
     venv/
 per-file-ignores =
     */__init__.py: D104, F401, DALL000,
-    */tests/*.py: DALL000,
+    */tests/*.py: DALL000, E402
     */apps.py: DALL000,
     manage.py: DALL000
 max-line-length = 100
