added setup.py & improvements for publishing

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ exclude =
     */migrations/
     venv/
 per-file-ignores =
-    */__init__.py: D104, F401, DALL000, E402
+    __init__.py, */__init__.py: D104, F401, DALL000, E402
     */tests/*.py: DALL000, E402
     */apps.py: DALL000,
     manage.py: DALL000
