--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
 
 
 jobs:
-    check_code_quality:
+    publish:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v2
