--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,7 @@ jobs:
                     python-version: "3.x"
             -   name: Build binary wheel and a source tarball
                 run: python setup.py sdist
-            -   name: Publish distribution to Test PyPI
+            -   name: Publish to PyPI
                 uses: pypa/gh-action-pypi-publish@master
                 with:
                     password: ${{ secrets.PYPI_TOKEN }}
-                    repository_url: https://test.pypi.org/legacy/
