fixes for package publishing

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ exclude =
     .git/
     */migrations/
     venv/
+    setup.py
 per-file-ignores =
     __init__.py, */__init__.py: D104, F401, DALL000, E402
     */tests/*.py: DALL000, E402
