--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ packaging==21.0
 pycodestyle==2.7.0
 pydocstyle==6.1.1
 pyflakes==2.3.1
+pypandoc==1.6.3
 pyparsing==2.4.7
 pytz==2021.1
 six==1.16.0
