--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,8 @@ jobs:
             -   uses: actions/setup-python@v2
                 with:
                     python-version: "3.x"
+            -   name: Install requirements
+                run: pip install -r requirements.txt
             -   name: Build binary wheel and a source tarball
                 run: python setup.py sdist
             -   name: Publish to PyPI
